# SCARA

./: .gitignore  README.md  occupancy_grid.npy
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/final2/share/final2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/install/final2/share/final2/config/: scara_control.yaml
src/install/final2/share/final2/launch/: display.launch  gazebo.launch  scara_control.launch
src/install/final2/share/final2/urdf/: final2.urdf
src/log/: latest_build
src/myrobot/: CMakeLists.txt  package.xml
src/myrobot/config/: pid_params.yaml
src/myrobot/excu/: control_robot.py  iv.py  map.py  ocu_map.py  p2p.py  test_one_point.py  vequydao1.py  vequydao2.py
src/myrobot/launch/: display.launch.py  gazebo.launch.py  obstacal.gazebo.launch.py
src/myrobot/meshes/: L1.STL  L2.STL  L3.STL  base_link.STL
src/myrobot/urdf/: myrobot.xacro
src/myrobot/worlds/: my_world
src/myrobot/worlds/ob_world/: model.config  model.sdf
